--- a/wsLogin/bin/wsLogin.dll.config
+++ b/wsLogin/bin/wsLogin.dll.config
@@ -1,13 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
+  <!--
+    Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
 
-    <system.web>
-      <compilation debug="true" targetFramework="4.6.1" />
-      <httpRuntime targetFramework="4.6.1" />
-    </system.web>
+    Los siguientes atributos se pueden establecer en la etiqueta <httpRuntime>.
+      <system.Web>
+        <httpRuntime targetFramework="4.5.2" />
+      </system.Web>
+  -->
+  <system.web>
+    <compilation debug="true" targetFramework="4.5.2"/>
+    <httpRuntime targetFramework="4.5.2"/>
+  </system.web>
   <connectionStrings>
-
-    <add name="strConexion" connectionString="Data Source=192.168.1.52;Initial Catalog=Foco_WebMaster;Integrated Security=False;Connect Timeout=200;USER ID=foco_webmaster;password=Foco38Web1835" />
-   
+    <add name="strConexion" connectionString="Data Source=192.168.1.52;Initial Catalog=Foco_WebMaster;Integrated Security=False;Connect Timeout=200;USER ID=foco_webmaster;password=Foco38Web1835"/>
   </connectionStrings>
 </configuration>
